@@ -22,6 +22,7 @@ devscripts (2.15.9) UNRELEASED; urgency=medium
     * use 'file' command to decide whether to scan a file or
       not (instead of testing file suffix)
     * remove trailing '#' from © information
+    * store only first © block to avoid duplicated information
 
  -- Joachim Breitner <nomeata@debian.org>  Tue, 11 Aug 2015 21:12:03 +0200
 
